# CameraCalib2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
PicCalib/: CMakeLists.txt  Settings.h  default.xml  main.cpp
data/20220719_S21_calib_small/: out_camera_data-s20.xml
examples/20220719_S20_calibration_small/: _out_camera_data-s20.xml  out_camera_data-s20.xml
